--- a/frontend/templates/home.page.html
+++ b/frontend/templates/home.page.html
@@ -96,13 +96,13 @@
     <section class="hero">
       <div class="hero-slider">
         <div class="slide active">
-          <img src="images/hero1.jpg" alt="Waste Management" />
+          <img src="/frontend/static/images/hero1.jpg" alt="Waste Management" />
         </div>
         <div class="slide">
-          <img src="images/hero2.jpg" alt="Recycling Services" />
+          <img src="/frontend/static/images/hero2.jpg" alt="Recycling Services" />
         </div>
         <div class="slide">
-          <img src="images/hero3.jpg" alt="Environmental Solutions" />
+          <img src="/frontend/static/images/hero3.jpg" alt="Environmental Solutions" />
         </div>
       </div>
       <div class="hero-content">
@@ -136,7 +136,7 @@
         <div class="about-grid">
           <div class="about-image">
             <div class="image-container">
-              <img src="images/about-main.jpg" alt="ZingiraTech team at work" />
+              <img src="/frontend/static/images/about-main.jpg" alt="ZingiraTech team at work" />
               <div class="experience-badge">
                 <span class="years">18</span>
                 <span class="text">Years of<br />Excellence</span>
@@ -286,7 +286,7 @@
               </div>
               <div class="feature-image">
                 <img
-                  src="images/features/security.png"
+                  src="/frontend/static/images/features/security.png"
                   alt="Security Feature"
                 />
               </div>
@@ -305,7 +305,7 @@
               </div>
               <div class="feature-image">
                 <img
-                  src="images/features/convenience.png"
+                  src="/frontend/static/images/features/convenience.png"
                   alt="Convenience Feature"
                 />
               </div>
@@ -323,7 +323,7 @@
                 <i class="fas fa-award"></i>
               </div>
               <div class="feature-image">
-                <img src="images/features/rewards.png" alt="Rewards Feature" />
+                <img src="/frontend/static/images/features/rewards.png" alt="Rewards Feature" />
               </div>
             </div>
             <div class="feature-content">
@@ -340,7 +340,7 @@
               </div>
               <div class="feature-image">
                 <img
-                  src="images/features/tracking.png"
+                  src="/frontend/static/images/features/tracking.png"
                   alt="Tracking Feature"
                 />
               </div>
