fixed image location routing, fixed login and sign up links

--- a/frontend/templates/home.page.html
+++ b/frontend/templates/home.page.html
@@ -79,8 +79,8 @@
             </div>
           </div>
           <div class="auth-nav-buttons">
-            <a href="login.html" class="login-button">Login</a>
-            <a href="signup.html" class="signup-button">Sign Up</a>
+            <a href="/login" class="login-button">Login</a>
+            <a href="/signup" class="signup-button">Sign Up</a>
           </div>
         </div>
 
@@ -96,13 +96,13 @@
     <section class="hero">
       <div class="hero-slider">
         <div class="slide active">
-          <img src="/frontend/static/images/hero1.jpg" alt="Waste Management" />
+          <img src="/static/images/hero1.jpg" alt="Waste Management" />
         </div>
         <div class="slide">
-          <img src="/frontend/static/images/hero2.jpg" alt="Recycling Services" />
+          <img src="/static/images/hero2.jpg" alt="Recycling Services" />
         </div>
         <div class="slide">
-          <img src="/frontend/static/images/hero3.jpg" alt="Environmental Solutions" />
+          <img src="/static/images/hero3.jpg" alt="Environmental Solutions" />
         </div>
       </div>
       <div class="hero-content">
@@ -136,7 +136,7 @@
         <div class="about-grid">
           <div class="about-image">
             <div class="image-container">
-              <img src="/frontend/static/images/about-main.jpg" alt="ZingiraTech team at work" />
+              <img src="/static/images/about-main.jpg" alt="ZingiraTech team at work" />
               <div class="experience-badge">
                 <span class="years">18</span>
                 <span class="text">Years of<br />Excellence</span>
@@ -286,7 +286,7 @@
               </div>
               <div class="feature-image">
                 <img
-                  src="/frontend/static/images/features/security.png"
+                  src="/static/images/features/security.png"
                   alt="Security Feature"
                 />
               </div>
@@ -305,7 +305,7 @@
               </div>
               <div class="feature-image">
                 <img
-                  src="/frontend/static/images/features/convenience.png"
+                  src="/static/images/features/convenience.png"
                   alt="Convenience Feature"
                 />
               </div>
@@ -323,7 +323,7 @@
                 <i class="fas fa-award"></i>
               </div>
               <div class="feature-image">
-                <img src="/frontend/static/images/features/rewards.png" alt="Rewards Feature" />
+                <img src="/static/images/features/rewards.png" alt="Rewards Feature" />
               </div>
             </div>
             <div class="feature-content">
@@ -340,10 +340,10 @@
               </div>
               <div class="feature-image">
                 <img
-                  src="/frontend/static/images/features/tracking.png"
-                  alt="Tracking Feature"
+                    src="/static/images/features/tracking.png"
+                    alt="Tracking Feature"
                 />
-              </div>
+            </div>          
             </div>
             <div class="feature-content">
               <h3>Impact Tracking</h3>
